--- a/CN.html
+++ b/CN.html
@@ -404,8 +404,8 @@
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">YouTube</a>
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">抖音</a>
-                        <a href="blogs_CN/buyMeACoffee.html">请我喝杯咖啡🌹</a>
-                        <a href="blogs_CN/cuilanliu.html">以纪念我逝去的亲人</a>
+                        <a href="blogs_CN/buyMeACoffee.html">打赏</a>
+                        <a href="blogs_CN/cuilanliu.html">纪念</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>请选择您的语言</option>
                             <option value="EN.html">English🇺🇸</option>
