--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <a href="https://www.instagram.com/haozheli04/">Instagram</a>
                         <a href="https://v.douyin.com/rtTTNA8/">TikTok China</a>
                         <a href="blogs/buyMeACoffee.html">Buy Me A Coffee🌹</a>
-                        <a href="blogs/cuilanliu.html">In memory of my departed family members</a>
+                        <a href="blogs/cuilanliu.html">Family Memory</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
                             <option value="EN.html">English (US) 🇺🇸</option>
