--- a/en-us.html
+++ b/en-us.html
@@ -411,13 +411,13 @@
                         <a href="blogs/cuilanliu.html">Family Memory</a>
                         <select onchange="window.location=this.value;">
                             <option value="" style="color: #b6b6b6" disabled selected>Please Select Your Language 🌍</option>
-                            <option value="EN.html">English (US) 🇺🇸</option>
-                            <option value="CN.html">简体中文 🇨🇳</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=zh-CN&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 🇯🇵 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 🇰🇷 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français 🇫🇷 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch 🇩🇪 (Google Translate)</option>
-                            <option value="https://www-haozheli-com.translate.goog/EN.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other🌍 (Google Translate)</option>
+                            <option value="en-us.html">English (US) 🇺🇸</option>
+                            <option value="zh-cn.html">简体中文 🇨🇳</option>
+                            <option value="https://www-haozheli-com.translate.goog/en-us.html?_x_tr_sl=zh-CN&_x_tr_tl=ja&_x_tr_hl=ja&_x_tr_pto=wapp">日本 🇯🇵 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/en-us.html?_x_tr_sl=en&_x_tr_tl=ko&_x_tr_hl=ko&_x_tr_pto=wapp">한국인 🇰🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/en-us.html?_x_tr_sl=en&_x_tr_tl=fr&_x_tr_hl=fr&_x_tr_pto=wapp">Français 🇫🇷 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/en-us.html?_x_tr_sl=en&_x_tr_tl=de&_x_tr_hl=de&_x_tr_pto=wapp">Deutsch 🇩🇪 (Google Translate)</option>
+                            <option value="https://www-haozheli-com.translate.goog/en-us.html?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp">Other🌍 (Google Translate)</option>
                         </select>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
