delete .html portion and update traditional chinese version

--- a/blogs/greetingsSample.html
+++ b/blogs/greetingsSample.html
@@ -21,5 +21,15 @@
           document.querySelector('p').innerHTML = "In " + language + ", " + greeting + " means hello!";
         };
     </script>
+
+    <!--delete the html part-->
+    <script>
+      var currentUrl = window.location.href;
+      if (currentUrl.indexOf('.html') !== -1) {
+        currentUrl = currentUrl.slice(0, -5);
+      }
+      history.replaceState(null, null, currentUrl);
+
+    </script>
   </body>
 </html>
