--- a/blogs/qingdaoSummer.html
+++ b/blogs/qingdaoSummer.html
@@ -516,5 +516,15 @@ The video supports DolbyVision 4K.
             }
             window.addEventListener('load', addDarkmodeWidget);
         </script>
+
+        <!--delete the html part-->
+        <script>
+            var currentUrl = window.location.href;
+            if (currentUrl.indexOf('.html') !== -1) {
+                currentUrl = currentUrl.slice(0, -5);
+            }
+            history.replaceState(null, null, currentUrl);
+
+        </script>
     </body>
 </html>
