--- a/blogs/automation.html
+++ b/blogs/automation.html
@@ -513,5 +513,15 @@
             }
             window.addEventListener('load', addDarkmodeWidget);
         </script>
+
+        <!--delete the html part-->
+        <script>
+            var currentUrl = window.location.href;
+            if (currentUrl.indexOf('.html') !== -1) {
+                currentUrl = currentUrl.slice(0, -5);
+            }
+            history.replaceState(null, null, currentUrl);
+
+        </script>
     </body>
 </html>
