--- a/blogs/personalWebsite.html
+++ b/blogs/personalWebsite.html
@@ -525,5 +525,15 @@ I built my personal website in my spare time. I am very weak in HTML and CSS pro
             }
             window.addEventListener('load', addDarkmodeWidget);
         </script>
+
+        <!--delete the html part-->
+        <script>
+            var currentUrl = window.location.href;
+            if (currentUrl.indexOf('.html') !== -1) {
+                currentUrl = currentUrl.slice(0, -5);
+            }
+            history.replaceState(null, null, currentUrl);
+
+        </script>
     </body>
 </html>
