--- a/blogs_CN/mulanli.html
+++ b/blogs_CN/mulanli.html
@@ -485,5 +485,15 @@
         </div>
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+
+        <!--delete the html part-->
+        <script>
+            var currentUrl = window.location.href;
+            if (currentUrl.indexOf('.html') !== -1) {
+                currentUrl = currentUrl.slice(0, -5);
+            }
+            history.replaceState(null, null, currentUrl);
+
+        </script>
     </body>
 </html>
