update of gallery page

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/photography.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="blogs/photography.html" class="hoverbutton global-radius">GO</a>
+							<a href="gallery/en-us.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
