--- a/zh-cn.html
+++ b/zh-cn.html
@@ -260,7 +260,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/摄影.png" class="img-fluid" alt="投资组合图">
 						<div class="img-overlay">
-							<a href="blogs_CN/photography.html" class="hoverbutton global-radius">GO</a>
+							<a href="gallery/zh-cn.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
