update of gallery page

--- a/gallery/en-us.html
+++ b/gallery/en-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html lang="zh-cn">
+<html lang="en-us">
 	<head>
-		<title>画廊 - 李浩哲的网站</title>
+		<title>Gallery - Haozhe Li's website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,10 +19,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="https://www.haozheli.com"><strong>主页</strong></a></h1>
+						<h1><a href="https://www.haozheli.com"><strong>HOME</strong></a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon fa-info-circle">关于</a></li>
+								<li><a href="#footer" class="icon fa-info-circle">ABOUT</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -31,83 +31,83 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/IMG_20220811_134156.jpeg" class="image"><img src="images/IMG_20220811_134156.jpeg" alt="" /></a>
-							<h2>我的姥姥 - 纪念</h2>
-							<p>纪念于2023年去世的姥姥，于2022年8月11日拍摄</p>
+							<h2>My Grandmother - In Memoriam</h2>
+							<p>In memory of my grandmother, who died in 2023, taken on August 11, 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/16411680573003_.jpeg" class="image"><img src="images/16411680573003_.jpeg" alt="" /></a>
-							<h2>我的爷爷 - 纪念</h2>
-							<p>纪念于2023年去世的爷爷，于2022年冬季拍摄</p>
+							<h2>My Grandfather - In Memoriam</h2>
+							<p>In memory of my grandmother, who died in 2023, taken on winter, 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1195.jpeg" class="image"><img src="images/IMG_1195.jpeg" alt="" /></a>
-							<h2>城区 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Downtown - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1198.jpeg" class="image"><img src="images/IMG_1198.jpeg" alt="" /></a>
-							<h2>城区全景 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Wide Downtown - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1200.jpeg" class="image"><img src="images/IMG_1200.jpeg" alt="" /></a>
-							<h2>港口 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Harbor - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1206.jpeg" class="image"><img src="images/IMG_1206.jpeg" alt="" /></a>
-							<h2>摩天轮 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Ferris Wheel - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1207.jpeg" class="image"><img src="images/IMG_1207.jpeg" alt="" /></a>
-							<h2>街头 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Street - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1213.jpeg" class="image"><img src="images/IMG_1213.jpeg" alt="" /></a>
-							<h2>雪山与酒店 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Hotel on a Snowy Mountain - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1218.jpeg" class="image"><img src="images/IMG_1218.jpeg" alt="" /></a>
-							<h2>飞跃大厦的客机 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Skyscrapers and airplane - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_1181%20edited.jpeg" class="image"><img src="images/IMG_1181%20edited.jpeg" alt="" /></a>
-							<h2>通往大厦的铁道 - 西雅图</h2>
-							<p>由iPhone 14 Pro拍摄于2022年12月于西雅图史密斯塔</p>
+							<h2>Railways - Seattle</h2>
+							<p>Taken by iPhone 14 Pro at Smith Tower, Seattle, December 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_20220614_183757%20edited.jpeg" class="image"><img src="images/IMG_20220614_183757%20edited.jpeg" alt="" /></a>
-							<h2>山峦I - 北京</h2>
-							<p>由华为P40 Pro拍摄于2022年6月于北京百望山</p>
+							<h2>The Mountains I - Beijing</h2>
+							<p>Shot by Huawei P40 Pro at Baiwangshan, Beijing, June 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_20220614_184055%20edited.jpeg" class="image"><img src="images/IMG_20220614_184055%20edited.jpeg" alt="" /></a>
-							<h2>城区 - 北京</h2>
-							<p>由华为P40 Pro拍摄于2022年6月于北京百望山</p>
+							<h2>Downtown - Beijing</h2>
+							<p>Shot by Huawei P40 Pro at Baiwangshan, Beijing, June 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_20220614_185755%20edited.jpeg" class="image"><img src="images/IMG_20220614_185755%20edited.jpeg" alt="" /></a>
-							<h2>山峦II - 北京</h2>
-							<p>由华为P40 Pro拍摄于2022年6月于北京百望山</p>
+							<h2>The Mountains II - Beijing</h2>
+							<p>Shot by Huawei P40 Pro at Baiwangshan, Beijing, June 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/IMG_20220606_092412%20edited.jpeg" class="image"><img src="images/IMG_20220606_092412%20edited.jpeg" alt="" /></a>
-							<h2>栈桥 - 青岛</h2>
-							<p>由华为P40 Pro拍摄于2022年6月于青岛栈桥</p>
+							<h2>Trestle - Qingdao</h2>
+							<p>Shot by Huawei P40 Pro at Zhanqiao, Qingdao, June 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/20220601_022657210_iOS.jpeg" class="image"><img src="images/20220601_022657210_iOS.jpeg" alt="" /></a>
-							<h2>海滩 - 青岛</h2>
-							<p>由松下LX10拍摄于2022年6月于青岛市南</p>
+							<h2>Coast - Qingdao</h2>
+							<p>Shot by Huawei P40 Pro at Shinan, Qingdao, June 2022</p>
 						</article>
 						<article class="thumb">
 							<a href="images/WechatIMG1670.jpeg" class="image"><img src="images/WechatIMG1670.jpeg" alt="" /></a>
-							<h2>黑龙潭 - 丽江</h2>
-							<p>于2013年拍摄于丽江</p>
+							<h2>Heilongtan - Lijiang</h2>
+							<p>Shot on 2013, Lijiang, Yunnan</p>
 						</article>
 					</div>
                     <div class="copyrights">Collect from <a href="https://www.haozheli.com" >Haozhe Li</a></div>
@@ -117,11 +117,11 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>李浩哲的个人画廊</h2>
-									<p>很高兴能在这里看见你！这里是我的个人画廊，我定期在该网页更新我最新的摄影作品。我的摄影技术比较拙劣，但里面的照片都承载着我点点滴滴的记忆。</p>
+									<h2>Gallery - Haozhe Li</h2>
+									<p>It's great to see you here! This is my personal gallery, and I regularly update my latest photography on this page. My photography skills are rather clumsy, but the photos in it all hold a little bit of my memories.</p>
 								</section>
 								<p class="copyright">
-									&copy; Haozhe Li 2023. 您可以访问 <a href="https://www.haozheli.com" target="_blank" title="网站模板">我的主页</a> - 或者 <a href="en-us.html" title="网页模板" target="_blank">Read in English</a>.
+									&copy; Haozhe Li 2023. Visit <a href="https://www.haozheli.com" target="_blank" title="网站模板">HOME</a> - or <a href="zh-cn.html">切换为中文</a>.
 								</p>
 							</div>
 						</div>
