--- a/index.html
+++ b/index.html
@@ -186,66 +186,66 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/CS124MP.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/CS124MP.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Programming</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Machine Project CS 124</a></h2>
+              <h2 class="heading"><a href="#">Machine Project CS 124</a></h2>
               <p>The machine project of introduction to computer science I - CS 124</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/personalWebsite.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/personalWebsite.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
               <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">My Personal Website</a></h2>
+              <h2 class="heading"><a href="#">My Personal Website</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/davinci.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/davinci.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Learn Visual Effects in 90 Seconds</a></h2>
+              <h2 class="heading"><a href="#">Learn Visual Effects in 90 Seconds</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
               <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">QingDao - Summer</a></h2>
+              <h2 class="heading"><a href="#">QingDao - Summer</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/despacito.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/despacito.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Music</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Despacito - Duo Cellos</a></h2>
+              <h2 class="heading"><a href="#">Despacito - Duo Cellos</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
