--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
             <div class="col-md-12 text-center">
 
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://haozheli.com" target="_blank">Haozhe Li</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://haozheli.com" target="_blank">Haozhe Li</a></p>
             </div>
           </div>
         </div>
