--- a/about.html
+++ b/about.html
@@ -89,7 +89,6 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Haozhe Li</h2>
                   <p>Hi, I'm Haozhe Li (Howard), a Computer Science and Music student at the University of Illinois. I'm a cellist and programmer with a lifelong love for both. I've played in symphony orchestras for almost a decade and have gained proficiency in Python and Java. I'm also a popular video creator, publishing tutorials and showcasing my cinematic shots and video editing skills on Bilibili and YouTube, with millions of views.</p>
-                  <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
 					  <li><a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog"><span class="icon-youtube"></span></a></li>
 					  <li><a href="https://www.linkedin.com/in/haozhe-li-306742252/"><span class="icon-linkedin"></span></a></li>
@@ -108,7 +107,7 @@
           	<div class="col-md-10">
           		<div class="profile ftco-animate">
 	          		<h2 class="mb-4">Profile</h2>
-	          		<h4 class="mb-4">Computer Science | Filmmaking | Music</h4>
+	          		<h4 class="mb-4"><a href="uploads/Haozhe%20Li_Resume.pdf">Checkout my resume</a></h4>
 	          		<p>I am a computer science and music student at the University of Illinois with a strong academic record. I have extensive programming experience in C++, Java, and Python, and a solid foundation in video and music production. In addition to my studies, I have founded a successful video blog channel with over 10,000 subscribers, where I share video tutorials, films, and vlogs. I also have experience with HTML and CSS and have built my own personal website from scratch. I am a creative and driven individual with a passion for technology and the arts, and I am excited to bring my skills and enthusiasm to any project or team.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
