--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
           	<div class="col-md-10">
           		<div class="profile ftco-animate">
 	          		<h2 class="mb-4">Profile</h2>
-	          		<h4 class="mb-4"><a href="uploads/Haozhe%20Li_Resume.pdf">Checkout my resume</a></h4>
+	          		<h4 class="mb-4"><a href="uploads/Haozhe%20Li_Resume.pdf">Checkout My Resume</a></h4>
 	          		<p>I am a computer science and music student at the University of Illinois with a strong academic record. I have extensive programming experience in C++, Java, and Python, and a solid foundation in video and music production. In addition to my studies, I have founded a successful video blog channel with over 10,000 subscribers, where I share video tutorials, films, and vlogs. I also have experience with HTML and CSS and have built my own personal website from scratch. I am a creative and driven individual with a passion for technology and the arts, and I am excited to bring my skills and enthusiasm to any project or team.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
