--- a/index.html
+++ b/index.html
@@ -185,68 +185,68 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/CS124MP.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/CS124MP.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Programming</h4>
-              <h2 class="heading"><a href="#">Machine Project CS 124</a></h2>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">Machine Project CS 124</a></h2>
               <p>The machine project of introduction to computer science I - CS 124</p>
-              <p><a href="#">View Project</a></p>
+              <p><a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="#" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/personalWebsite.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/personalWebsite.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
               <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="#">My Personal Website</a></h2>
+              <h2 class="heading"><a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">My Personal Website</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/davinci.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/davinci.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="#">Learn Visual Effects in 90 Seconds</a></h2>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=-D5_GKfghpU&t=3s">Learn Visual Effects in 90 Seconds</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="#" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.youtube.com/watch?v=fdMdneL_YtU" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/qingdao.jpeg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
               <h4 class="subheading">Filmmaking</h4>
-              <h2 class="heading"><a href="#">QingDao - Summer</a></h2>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">QingDao - Summer</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <p><a href="https://www.youtube.com/watch?v=fdMdneL_YtU">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="#" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/despacito.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.youtube.com/watch?v=IbZteYbCg8A" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/despacito.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
               <h4 class="subheading">Music</h4>
-              <h2 class="heading"><a href="#">Despacito - Duo Cellos</a></h2>
+              <h2 class="heading"><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">Despacito - Duo Cellos</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
+              <p><a href="https://www.youtube.com/watch?v=IbZteYbCg8A">View Project</a></p>
             </div>
           </div>
         </div>
